--- a/src/sass/components/_modal-film.scss
+++ b/src/sass/components/_modal-film.scss
@@ -7,6 +7,7 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
   padding: 0 20px;
+  background-size: cover;
 
   @media screen and (min-width: 768px) {
     padding: 0 32px;
@@ -15,6 +16,8 @@
 
 .modal__container {
   overflow-x: auto;
+  opacity: 0.8;
+  border-radius: 6px;
 
   position: relative;
   top: 50%;
